refactor to new architecture
