# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  http.bookRequest:
+  books.bookRequest:
     properties:
       description:
         type: string
@@ -15,7 +15,7 @@ definitions:
     - published_date
     - title
     type: object
-  models.Book:
+  model.Book:
     properties:
       book_id:
         type: integer
@@ -43,67 +43,8 @@ info:
   description: Go + Postgres + Chi Router + SqlBoiler starter kit for API development.
   license: {}
   title: Go8
-  version: 0.1.0
+  version: 0.2.0
 paths:
-  /book:
-    post:
-      consumes:
-      - application/json
-      description: Get a book with JSON payload
-      parameters:
-      - description: Book Request
-        in: body
-        name: Book
-        required: true
-        schema:
-          $ref: '#/definitions/http.bookRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.Book'
-      summary: Create a Book
-  /book/{bookID}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete a book by its id.
-      parameters:
-      - description: book ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Ok
-        "400":
-          description: Bad request
-        "500":
-          description: Internal Server error
-      summary: Delete a Book
-    get:
-      consumes:
-      - application/json
-      description: Get a book by its id.
-      parameters:
-      - description: book ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Book'
-      summary: Get a Book
   /books:
     get:
       consumes:
@@ -125,7 +66,103 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Book'
+              $ref: '#/definitions/model.Book'
             type: array
       summary: Show all books
+    post:
+      consumes:
+      - application/json
+      description: Get a book with JSON payload
+      parameters:
+      - description: Book Request
+        in: body
+        name: Book
+        required: true
+        schema:
+          $ref: '#/definitions/books.bookRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Book'
+      summary: Create a Book
+  /books/{bookID}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a book by its id.
+      parameters:
+      - description: book ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Ok
+        "500":
+          description: Internal Server error
+      summary: Delete a Book
+    get:
+      consumes:
+      - application/json
+      description: Get a book by its id.
+      parameters:
+      - description: book ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Book'
+      summary: Get a Book
+    put:
+      consumes:
+      - application/json
+      description: Update a book by its model.
+      parameters:
+      - description: Book Request
+        in: body
+        name: Book
+        required: true
+        schema:
+          $ref: '#/definitions/books.bookRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Ok
+        "500":
+          description: Internal Server error
+      summary: Update a Book
+  /books/search:
+    get:
+      consumes:
+      - application/json
+      description: Search a book by its title.
+      parameters:
+      - description: search term
+        in: query
+        name: query
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Book'
+            type: array
+      summary: Search a Book
 swagger: "2.0"
